feat: fixing header styling so it is over main page content, and updating work history title content styling for dark mode

--- a/src/components/EmployerHistory/EmployerHistory.astro
+++ b/src/components/EmployerHistory/EmployerHistory.astro
@@ -172,6 +172,7 @@ const contentContainerId = `content-container-${id}`;
 			margin-right: 5px;
 		}
 		&__company-name {
+			color: var(--gray-0);
 		}
 		&__down-chevron-container {
 			margin-left: 5px;
@@ -179,6 +180,12 @@ const contentContainerId = `content-container-${id}`;
 
 			&--rotate {
 				transform: rotate(0deg);
+			}
+
+			:global(svg) {
+				:global(path) {
+					fill: var(--gray-0);
+				}
 			}
 		}
 
