fix(Header.astro): setting type value for mobile menu Button to 'quiet'

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ const {
 		<Button
 			id='mobile-menu-button'
 			class='header__mobile-menu-button'
-			type='icon'
+			type='quiet'
 		>
 			<Icon icon='menu-hamburger' />
 		</Button>
