--- a/src/components/SideBySideCard.astro
+++ b/src/components/SideBySideCard.astro
@@ -4,11 +4,12 @@
 </div>
 
 <style>
+
 	.side-by-side-card {
-		border-radius: 10px;
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
+		grid-template-rows: auto 1fr;
 		overflow: hidden;
 	}
+
 </style>
