--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,8 @@ import SiteLayout from '../layouts/SiteLayout.astro';
 import ResumeSummaryCard from '../components/ResumeSummaryCard.astro';
 import {type MainNavigationLinksMetadata} from '../types/MainNavigationLinkTypes';
 import SkillsCard from '../components/SkillsCard.astro';
-import CoryLarcadeImage from '../images/Cory-Larcade.png';
-import {
-	backendSkillsData,
-	frontendSkillsData,
-	otherSkillsData,
-} from '../data/skills-data';
+import CoryLarcadeWearingHatImage from '../images/Cory-Larcade-wearing-a-hat.png';
+import {skillsData} from '../data/skills-data';
 import {educationHistory} from '../data/educationHistory-data';
 import {workHistory} from '../data/employerHistory-data';
 import EmployerHistory from '../components/EmployerHistory/EmployerHistory.astro';
@@ -66,11 +62,11 @@ const subtitleItemList = [
 
 			<div class='resume__profile-pic'>
 				<Image
-					src='https://placehold.co/300x135'
+					src={CoryLarcadeWearingHatImage}
 					width='300'
-					height='135'
+					height='416'
 					format='webp'
-					alt='Profile picture of Cory Larcade'
+					alt='Cory Larcade wearing a hat'
 				/>
 			</div>
 
@@ -87,10 +83,6 @@ const subtitleItemList = [
 				</ul>
 
 				<p class='resume__paragraph'>I'd love to work with you so reach out if you're interested!</p>
-				<!-- <p class='resume__paragraph'>
-					P.S. My wife told me to mention that I'm Native American, and as the saying goes, a wise man listens to his wife.
-					<span class='resume__icon-container'><Icon icon='teepee' /></span>
-				</p> -->
 			</div>
 		</section>
 
@@ -111,32 +103,17 @@ const subtitleItemList = [
 		>
 			<h2 class='resume__section__title'>Skill set</h2>
 
-			<div class='resume__section__skills-card-container'>
-				<SkillsCard
-					data={frontendSkillsData}
-					img={CoryLarcadeImage}
-					imgAltText='Frontend skills image'
-					title='Frontend Skills'
-				/>
-			</div>
+			{skillsData.map((skillData) => (
+				<div class='resume__skills'>
+					<div class='resume__skills__title-container'>
+						<h3 class='resume__skills__title'>{skillData.title}</h3>
+					</div>
 
-			<div class='resume__section__skills-card-container'>
-				<SkillsCard
-					data={backendSkillsData}
-					img={CoryLarcadeImage}
-					imgAltText='Backend skills image'
-					title='Backend Skills'
-				/>
-			</div>
-
-			<div class='resume__section__skills-card-container'>
-				<SkillsCard
-					data={otherSkillsData}
-					img={CoryLarcadeImage}
-					imgAltText='Other skills image'
-					title='Other Skills'
-				/>
-			</div>
+					<div class='resume__skills__card-container'>
+						<SkillsCard data={skillData} />
+					</div>
+				</div>
+			))}
 		</section>
 
 		<section
@@ -182,9 +159,26 @@ const subtitleItemList = [
 				text-align: center;
 			}
 
-			&__summary-card-container,
-			&__skills-card-container {
+			&__summary-card-container {
 				margin-top: 40px;
+			}
+		}
+
+		&__skills {
+			margin-top: 40px;
+
+			&__title-container {
+				display: flex;
+				justify-content: center;
+			}
+
+			&__title {
+				border-bottom: solid 2px var(--gray-200);
+				font-size: typography.$mobile-font-size--ML;
+			}
+
+			&__card-container {
+				margin-top: 20px;
 			}
 		}
 
@@ -246,11 +240,11 @@ const subtitleItemList = [
 		}
 
 		&__employer-history-container {
-			margin-top: 30px;
+			margin-top: 40px;
 		}
 
 		&__education-history-container {
-			margin-top: 30px;
+			margin-top: 40px;
 		}
 	}
 
