--- a/src/components/SkillsCard.astro
+++ b/src/components/SkillsCard.astro
@@ -31,16 +31,18 @@ const {
 <div class='skills-card'>
 	<SideBySideCard>
 		<div
-			class='skills-card__image-container'
+			class='skills-card__left-content'
 			slot='first'
 		>
-			<Image
-				src={img as any}
-				width='300'
-				height='400'
-				format='webp'
-				alt={imgAltText}
-			/>
+			<div class='skills-card__image-container'>
+				<Image
+					src={img as any}
+					width='300'
+					height='400'
+					format='webp'
+					alt={imgAltText}
+				/>
+			</div>
 		</div>
 
 		<div
@@ -72,10 +74,15 @@ const {
 	@use '../styles/typography';
 
 	.skills-card {
-		&__image-container {
+		&__left-content {
+			// TODO: Find background image to use
 			background-color: orange;
-			width: 100%;
-			height: 100%;
+			display: flex;
+			justify-content: center;
+		}
+		&__image-container {
+			// width: 100%;
+			// height: 100%;
 			// width: 300px;
 			// height: 416px;
 		}
