--- a/src/components/EmployerHistory/EmployerHistory.astro
+++ b/src/components/EmployerHistory/EmployerHistory.astro
@@ -244,6 +244,7 @@ const contentContainerId = `content-container-${id}`;
 		display: flex;
 		justify-content: center;
 		padding: 10px;
+		max-width: 260px;
 	}
 
 </style>
