--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -247,12 +247,9 @@ const subtitleItemList = [
 			}
 		}
 
-		&__employer-history-container {
-			margin-top: 40px;
-		}
-
+		&__employer-history-container,
 		&__education-history-container {
-			margin-top: 40px;
+			margin-top: 30px;
 		}
 	}
 
